--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
       </header>
 
-      <form>
+      <form name="kontakt" action="tak.html" netlify>
         <!-- Formular-indhold -->
         <div class="form-felt">
           <label for="navn">Navn</label>
@@ -70,7 +70,7 @@
           <label for="music">Design</label>
         </div>
 
-
+        <button type="submit">Send</button>
       </form>
     </section>
   </main>
